Added some initial support to add source to an existing build.

--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,14 @@ plugins {
 
 repositories {
     jcenter()
+    maven { url 'https://repo.gradle.org/gradle/repo' }
 }
 
 dependencies {
-    compile 'net.sf.jopt-simple:jopt-simple:5.0.2'
     compile 'io.airlift:airline:0.7'
+    compile 'org.gradle:gradle-tooling-api:3.3'
+
+    runtime 'org.slf4j:slf4j-simple:1.7.10'
 
     testCompile 'org.codehaus.groovy:groovy:2.4.7'
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
