--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     testCompile gradleTestKit()
     testCompile 'org.codehaus.groovy:groovy:2.4.10'
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
+    testRuntime 'cglib:cglib-nodep:2.2.2'
 }
 
 sourceCompatibility = 1.8
